# graphics

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets-demo.json  CMakePresets.json  CMakeUserPresets-Demo.json  CMakeUserPresets-demo.json  MakeLists.txt  Readme.md  compile_flags.txt  conanfile.py  conanfile.txt  using.dio  vcpkg-back.json  vcpkg-configuration.json  vcpkg.json  vcpkg.json.back  xmake.lua
doc/: CMakeLists.txt  conf.py.in  index.rst
src/common/: CMakeLists.txt  alignment.h  alignment.hpp  assert.hpp  bit_cast.h  bit_field.hpp  bit_util.h  cityhash.cpp  cityhash.h  class_traits.hpp  common.cmake  common.cppm  common_funcs.hpp  common_settings.hpp  common_types.cppm  common_types.hpp  concepts.h  div_ceil.hpp  error.cpp  error.hpp  file.cpp  file.hpp  literals.cppm  literals.hpp  logger.cpp  logger.cppm  logger.hpp  lru_cache.h  make_unique_for_overwrite.h  math_util.cppm  math_util.h  microprofile.cpp  microprofile.hpp  polyfill_thread.hpp  scope_exit.h  scratch_buffer.h  settings.cpp  settings.cppm  settings.hpp  settings_common.cpp  (+17 more)
src/common/fs/: file.cpp  file.h  fs.cpp  fs.h  fs_paths.h  fs_types.h  fs_util.cpp  fs_util.h  path_util.cpp  path_util.h
src/core/: CMakeLists.txt  buffer.cpp  buffer.hpp  core.cpp  core.cppm  core.hpp  device.cpp  device.hpp  device_buffer.cpp  device_buffer.hpp  frame_info.hpp  input.hpp  staging_buffer.cpp  staging_buffer.hpp
src/core/camera/: camera.cpp  camera.hpp
src/core/frontend/: framebuffer_layout.cpp  framebuffer_layout.cppm  framebuffer_layout.hpp  window.cpp  window.cppm  window.hpp
src/ecs/: CMakeLists.txt  component.hpp
src/ecs/camera/: camera.cpp  camera.hpp
src/ecs/components/: camera_component.hpp  dynamic_pipeline_state_component.hpp  light_component.hpp  material_component.hpp  model_componenet.hpp  render_state_component.hpp  tag_component.hpp  transform_component.hpp
src/ecs/scene/: entity.cpp  entity.hpp  scene.cpp  scene.hpp
src/ecs/ui/: cameraUI.hpp  lightUI.hpp  tagUI.hpp  transformUI.hpp
src/effects/: CMakeLists.txt  effect.cpp  effect.hpp  effects.cmake
src/effects/cubemap/: skybox.hpp
src/effects/light/: light.cpp  light.hpp  point_light.hpp
src/effects/model/: model.cpp  model.hpp  multi_mesh_model.cpp  multi_mesh_model.hpp
src/effects/particle/: particle.cpp  particle.hpp
src/graphics/: CMakeLists.txt  Main.qml  QT_common.cpp  QT_common.hpp  QT_render_widget.cpp  QT_render_widget.hpp  QT_window.cpp  QT_window.hpp  SDL_common.cpp  SDL_common.hpp  app.cpp  app.hpp  g_app.cpp  g_app.hpp  glfw_common.cpp  glfw_common.hpp  glfw_window.cpp  glfw_window.hpp  graphic.cpp  graphic.hpp  graphics.cmake  gui.cpp  gui.hpp  imgui_qt.cpp  imgui_qt.hpp  main.cpp  model_frag_spv.h  model_vert_spv.h  render_registry.hpp  sdl_window.cpp  sdl_window.hpp  ui.cpp  ui.hpp  vulkan_common.hpp  vulkan_surface.cpp  vulkan_surface.hpp
src/graphics/qml_ui/: CMakeLists.txt  RedButton.qml  RenderControl.qml
src/graphics/ui/: CMakeLists.txt  RenderControl.qml  render_config.cpp  render_config.hpp  scaling_filter.hpp
src/imgui/: CMakeLists.txt  gui.hpp  imgui_impl_vulkan.cpp
src/render_core/: CMakeLists.txt  compatible_formats.cpp  compatible_formats.h  compute_instance.cppm  compute_instance.hpp  delayed_destruction_ring.h  fixed_pipeline_state.cpp  fixed_pipeline_state.h  framebufferConfig.hpp  framebuffer_config.cpp  framebuffer_config.cppm  framebuffer_config.hpp  fsr.cpp  fsr.cppm  fsr.h  graphic.cppm  graphic.hpp  mesh.cppm  mesh.hpp  pipeline_dynamic_state.hpp  pipeline_state.cpp  pipeline_state.cppm  pipeline_state.h  rasterizer_interface.hpp  render_base.cpp  render_base.cppm  render_base.hpp  render_command.hpp  render_core.cmake  render_core.cpp  render_core.cppm  render_core.hpp  render_exception.hpp  render_thread.cpp  render_thread.hpp  shader_cache.cpp  shader_cache.cppm  shader_cache.hpp  shader_notify.cpp  shader_notify.cppm  (+10 more)
src/render_core/buffer_cache/: buffer.base.hpp  buffer_base.cppm  buffer_base.hpp  buffer_cache.cppm  buffer_cache.h  buffer_cache_base.hpp  usage_tracker.hpp
src/render_core/host_shaders/: CMakeLists.txt  vulkan_compute.comp  vulkan_present.frag  vulkan_present.vert
src/render_core/render_vulkan/: blit_image.cpp  blit_image.hpp  blit_screen.cpp  blit_screen.cppm  blit_screen.hpp  buffer_cache.cpp  buffer_cache.cppm  buffer_cache.h  buffer_cache.hpp  command_pool.cpp  command_pool.cppm  command_pool.hpp  compute_pass.cpp  compute_pass.hpp  compute_pipeline.cpp  compute_pipeline.cppm  compute_pipeline.hpp  descriptor_pool.cpp  descriptor_pool.cppm  descriptor_pool.hpp  fixed_pipeline_state.cpp  fixed_pipeline_state.h  format_to_vk.cpp  format_to_vk.cppm  format_to_vk.hpp  graphics_pipeline.cpp  graphics_pipeline.cppm  graphics_pipeline.hpp  master_semaphore.cpp  master_semaphore.cppm  (+49 more)
src/resource/: CMakeLists.txt  camera.cpp  camera.hpp  config.hpp  id.cpp  id.hpp  image.cpp  image.hpp  image_texture.cpp  image_texture.hpp  instance.cpp  instance.hpp  mesh_instance.hpp  model_instance.cpp  model_instance.hpp  particle_instance.cpp  particle_instance.hpp  resource.cmake  resource.cpp  resource.hpp  shader.cpp  shader.hpp  shader_stage.hpp
src/shader_tools/: CMakeLists.txt  exception.hpp  host_translate_info.h  profile.h  shader.cppm  shader_compile.cpp  shader_compile.cppm  shader_compile.hpp  shader_enums.hpp  shader_info.cppm  shader_info.h  stage.cppm  stage.h  varying_state.hpp
src/system/: CMakeLists.txt  CmakeLists.txt  camera_system.cpp  camera_system.hpp  embree_picker.cpp  embree_picker.hpp  logger_system.cpp  logger_system.hpp  pick_system.cpp  pick_system.hpp  render_system.hpp  setting.cpp  setting.cppm  setting_ui.cpp  setting_ui.hpp  system_config.cpp  system_config.hpp  transform_system.cpp  transform_system.hpp
src/test/: CMakeLists.txt  a.cpp  common_test.cpp  effect_test.cpp  main.cpp  model_vert_spv.h  resource_test.cpp  vulkan_test.cpp
src/ui/: CMakeLists.txt  ui.cpp  ui.hpp
src/utils/: CMakeLists.txt  log_util.cpp  log_util.hpp
src/world/: CMakeLists.txt  render_registry.hpp  world.cpp  world.hpp
(+193 files in other folders)
